--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="header-pages">
         <nav class="navbar navbar-expand-lg navbar-light d-flex justify-content-between menu-pages">
             <a class="navbar-brand" href="https://mgvillarreal.github.io/odontoCare/">
-                <img src="../images/logo.png" alt="Logo OdontoCare" class="logo">
+                <img src="./images/logo.png" alt="Logo OdontoCare" class="logo">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
