--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <body>
     <header class="header-pages">
         <nav class="navbar navbar-expand-lg navbar-light d-flex justify-content-between menu-pages">
-            <a class="navbar-brand" href="https://mgvillarreal.github.io/odontoCare/">
-                <img src="./images/logo.png" alt="Logo OdontoCare" class="logo">
+            <a class="navbar-brand" href="https://mgvillarreal.github.io/odontoCare/index.html">
+                <img src="../images/logo.png" alt="Logo OdontoCare" class="logo">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -26,13 +26,19 @@
             <div class="collapse navbar-collapse justify-content-end navegacion" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Turnos</a>
+                        <a class="nav-link" href="https://mgvillarreal.github.io/odontoCare/index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Mis Turnos</a>
+                        <a class="nav-link" href="https://mgvillarreal.github.io/odontoCare/pages/nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Mi Perfil</a>
+                        <a class="nav-link" href="https://mgvillarreal.github.io/odontoCare/pages/especialidades.html">Especialidades</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://mgvillarreal.github.io/odontoCare/pages/instalaciones.html">Instalaciones</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://mgvillarreal.github.io/odontoCare/pages/contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -41,10 +47,110 @@
         <h1 class="titulo-principal">Autogestión de Turnos</h1>
     </header>
 
-    <main class="main-pages">
-        <section>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis illum tempore veniam vitae quisquam fugiat harum dolorem in molestias, facilis natus nulla et placeat ab repudiandae sunt laborum dolorum id! Nesciunt eaque, consequuntur atque ipsa sequi, nam illo aspernatur inventore voluptas commodi illum expedita voluptatum quia quisquam sunt iste odio.</p>
-        </section>
+    <main>
+        <!-- Selección de especialidad -->
+        <div class="contenedor text-center" id="containerEspecialidades">
+            <h3 class="titulo mb-4">Seleccione una especialidad</h3>
+            <div class="row">
+                <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                    <div class="card" >
+                        <div class="card-item">
+                            <img src="../images/general.png" alt="Ícono Odontología General" class="icono">
+                            <p>Odontología General</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                    <div class="card" >
+                        <div class="card-item">
+                            <img src="../images/estetica.png" alt="Ícono Odontología Estética" class="icono">
+                            <p>Odontología Estética</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                    <div class="card">
+                        <div class="card-item">
+                            <img src="../images/implantes.png" alt="Ícono Implantes Dentales" class="icono">
+                            <p>Implantes Dentales</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                    <div class="card" >
+                        <div class="card-item">
+                            <img src="../images/cirugia.png" alt="Ícono Cirugía Oral" class="icono">
+                            <p>Cirugía Oral</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                    <div class="card" >
+                        <div class="card-item">
+                            <img src="../images/ortodoncia.png" alt="Ícono Ortodoncia" class="icono">
+                            <p>Ortodoncia</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                    <div class="card" >
+                        <div class="card-item">
+                            <img src="../images/endodoncia.png" alt="Ícono Endodoncia" class="icono">
+                            <p>Endodoncia</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                    <div class="card" >
+                        <div class="card-item">
+                            <img src="../images/periodoncia.png" alt="Ícono Periodoncia" class="icono">
+                            <p>Periodoncia</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                    <div class="card" >
+                        <div class="card-item">
+                            <img src="../images/odontopediatria.png" alt="Ícono Odontopediatría" class="icono">
+                            <p>Odontopediatría</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Formulario de datos -->
+        <div class="container mt-5 contenedor" id="containerFormulario">
+            <h2 class="titulo text-center mb-4">Complete sus datos</h2>
+            <form id="turnoForm">
+                <div class="mb-3">
+                    <label for="nombre" class="form-label">Nombre</label>
+                    <input type="text" class="form-control" id="nombre" required>
+                </div>
+                <div class="mb-3">
+                    <label for="apellido" class="form-label">Apellido</label>
+                    <input type="text" class="form-control" id="apellido" required>
+                </div>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="email" required>
+                </div>
+                <div class="mb-3">
+                    <label for="fecha" class="form-label">Fecha</label>
+                    <input type="date" class="form-control" id="fecha" required>
+                </div>
+                <div class="mb-3">
+                    <label for="hora" class="form-label">Hora</label>
+                    <input type="time" class="form-control" id="hora" required>
+                </div>
+                <button type="submit" class="btn btn-primary">Enviar</button>
+            </form>
+    
+            <!-- Mensaje de confirmación -->
+            <div id="mensaje" class="mt-3 alert alert-success d-none">
+                <!-- Texto generado en JS -->
+            </div>
+        </div>
     </main>
 
     <footer class="footer">
