corrijo ruta de imagenes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="header-pages">
         <nav class="navbar navbar-expand-lg navbar-light d-flex justify-content-between menu-pages">
             <a class="navbar-brand" href="https://mgvillarreal.github.io/odontoCare/index.html">
-                <img src="../images/logo.png" alt="Logo OdontoCare" class="logo">
+                <img src="./images/logo.png" alt="Logo OdontoCare" class="logo">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -55,7 +55,7 @@
                 <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                     <div class="card" >
                         <div class="card-item">
-                            <img src="../images/general.png" alt="Ícono Odontología General" class="icono">
+                            <img src="./images/general.png" alt="Ícono Odontología General" class="icono">
                             <p>Odontología General</p>
                         </div>
                     </div>
@@ -63,7 +63,7 @@
                 <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                     <div class="card" >
                         <div class="card-item">
-                            <img src="../images/estetica.png" alt="Ícono Odontología Estética" class="icono">
+                            <img src="./images/estetica.png" alt="Ícono Odontología Estética" class="icono">
                             <p>Odontología Estética</p>
                         </div>
                     </div>
@@ -71,7 +71,7 @@
                 <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                     <div class="card">
                         <div class="card-item">
-                            <img src="../images/implantes.png" alt="Ícono Implantes Dentales" class="icono">
+                            <img src="./images/implantes.png" alt="Ícono Implantes Dentales" class="icono">
                             <p>Implantes Dentales</p>
                         </div>
                     </div>
@@ -79,7 +79,7 @@
                 <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                     <div class="card" >
                         <div class="card-item">
-                            <img src="../images/cirugia.png" alt="Ícono Cirugía Oral" class="icono">
+                            <img src="./images/cirugia.png" alt="Ícono Cirugía Oral" class="icono">
                             <p>Cirugía Oral</p>
                         </div>
                     </div>
@@ -87,7 +87,7 @@
                 <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                     <div class="card" >
                         <div class="card-item">
-                            <img src="../images/ortodoncia.png" alt="Ícono Ortodoncia" class="icono">
+                            <img src="./images/ortodoncia.png" alt="Ícono Ortodoncia" class="icono">
                             <p>Ortodoncia</p>
                         </div>
                     </div>
@@ -95,7 +95,7 @@
                 <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                     <div class="card" >
                         <div class="card-item">
-                            <img src="../images/endodoncia.png" alt="Ícono Endodoncia" class="icono">
+                            <img src="./images/endodoncia.png" alt="Ícono Endodoncia" class="icono">
                             <p>Endodoncia</p>
                         </div>
                     </div>
@@ -103,7 +103,7 @@
                 <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                     <div class="card" >
                         <div class="card-item">
-                            <img src="../images/periodoncia.png" alt="Ícono Periodoncia" class="icono">
+                            <img src="./images/periodoncia.png" alt="Ícono Periodoncia" class="icono">
                             <p>Periodoncia</p>
                         </div>
                     </div>
@@ -111,7 +111,7 @@
                 <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                     <div class="card" >
                         <div class="card-item">
-                            <img src="../images/odontopediatria.png" alt="Ícono Odontopediatría" class="icono">
+                            <img src="./images/odontopediatria.png" alt="Ícono Odontopediatría" class="icono">
                             <p>Odontopediatría</p>
                         </div>
                     </div>
